[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/ubuntu/ubuntu-medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/ubuntu/ubuntu-bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://features/intro/scripts/scr_settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 1 )

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0

[node name="grid" type="VBoxContainer" parent="content"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 24

[node name="hbox" type="HBoxContainer" parent="content/grid"]
margin_right = 912.0
margin_bottom = 28.0

[node name="button_back" type="Button" parent="content/grid/hbox"]
margin_right = 42.0
margin_bottom = 28.0
text = "Back"

[node name="title" type="Label" parent="content/grid/hbox"]
margin_left = 46.0
margin_right = 162.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
valign = 1
uppercase = true

[node name="tab_container" type="TabContainer" parent="content/grid"]
margin_top = 52.0
margin_right = 912.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
tab_align = 0

[node name="Video" type="Tabs" parent="content/grid/tab_container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0

[node name="content" type="Control" parent="content/grid/tab_container/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0

[node name="grid" type="GridContainer" parent="content/grid/tab_container/Video/content"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="vbox" type="HBoxContainer" parent="content/grid/tab_container/Video/content/grid"]
margin_right = 856.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="display_fps" type="Label" parent="content/grid/tab_container/Video/content/grid/vbox"]
margin_top = 7.0
margin_right = 118.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 5 )
text = "Display FPS"

[node name="check" type="CheckButton" parent="content/grid/tab_container/Video/content/grid/vbox"]
margin_left = 126.0
margin_right = 202.0
margin_bottom = 40.0
pressed = true

[node name="Audio" type="Tabs" parent="content/grid/tab_container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 37.0
margin_right = -4.0
margin_bottom = -4.0

[node name="content" type="Control" parent="content/grid/tab_container/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0

[node name="grid" type="GridContainer" parent="content/grid/tab_container/Audio/content"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="vbox" type="VBoxContainer" parent="content/grid/tab_container/Audio/content/grid"]
margin_right = 856.0
margin_bottom = 51.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/grid/tab_container/Audio/content/grid/vbox"]
margin_right = 856.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "Volume"

[node name="hbox" type="HBoxContainer" parent="content/grid/tab_container/Audio/content/grid/vbox"]
margin_top = 30.0
margin_right = 856.0
margin_bottom = 51.0

[node name="volume_min" type="Label" parent="content/grid/tab_container/Audio/content/grid/vbox/hbox"]
margin_right = 34.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 7 )
text = "Min"
uppercase = true

[node name="slidier" type="HSlider" parent="content/grid/tab_container/Audio/content/grid/vbox/hbox"]
margin_left = 38.0
margin_right = 812.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="volume_max" type="Label" parent="content/grid/tab_container/Audio/content/grid/vbox/hbox"]
margin_left = 816.0
margin_right = 856.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "max"
uppercase = true

[connection signal="pressed" from="content/grid/hbox/button_back" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="content/grid/tab_container/Video/content/grid/vbox/check" to="." method="_on_check_pressed"]
